style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --font-weight-normal: 400;
  --font-weight-bold: 700;

  --color-primary: hsl(26, 100%, 55%);
  --color-primary-tint: hsl(25, 100%, 94%);
  --color-neutral-900: hsl(220, 13%, 13%);
  --color-neutral-600: hsl(219, 9%, 45%);
  --color-neutral-400: hsl(220, 14%, 75%);
  --color-neutral-100: hsl(223, 64%, 98%);
  --color-white: hsl(0, 0%, 100%);
  --color-lightbox-background: hsla(0, 0%, 0%, 0.75);

  --text-base: 1rem;
  --text-lg: 1.1rem;
  --text-xl: 2rem;
  --text-2xl: 3rem;

  --rounding-sm: 0.25rem;
  --rounding-md: 0.5rem;
  --rounding-lg: 1rem;

  --line-height-base: 1.5;
  --line-height-heading: 1.1;
}

body {
  font-family: "Kumbh Sans", sans-serif;
  font-size: var(--text-base);
  font-weight: var(--font-weight-normal);
  line-height: var(--line-height-base);
  color: var(--color-neutral-600);
  background-color: var(--color-white);
}

a {
  text-decoration: none;
  color: inherit;
}

button {
  background: none;
  border: none;
  cursor: pointer;
}

hr {
  color: var(--color-neutral-100);
  opacity: 0.3;
}

h1,
h2,
h3 {
  color: var(--color-neutral-900);
  line-height: var(--line-height-heading);
}

h1 {
  font-size: var(--text-2xl);
}

.container {
  width: 95vw;
  max-width: 79rem;
  margin: 0 auto;
}

.header {
  width: 100%;
  height: 8rem;
  display: flex;
  align-items: center;
}

.header > nav {
  align-self: stretch;
}

.logo {
  width: 10rem;
  height: auto;
}

.nav-list {
  margin-left: 4rem;
  list-style: none;
  display: flex;
  gap: 2.5rem;
  height: 100%;
}

.nav-list > li {
  display: flex;
  align-items: center;
}

.nav-list > li.active {
  border-bottom: 3px solid var(--color-primary);
}

.header-cart-btn {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-left: auto;
  margin-right: 3rem;
  font-size: 0;
}

.header-avatar-btn {
  width: 3.5rem;
  border-radius: 50%;
  font-size: 0;
}

.header-avatar-btn > img {
  width: 100%;
}

.header-avatar-btn:hover {
  outline: 2px solid var(--color-primary);
}

.product {
  margin-top: 6rem;
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
}

.product-gallery,
.product-details {
  padding: 0 4rem;
}

.product-gallery-btn {
  display: none;
  border-radius: var(--rounding-lg);
  font-size: 0;
  overflow: hidden;
}

.product-gallery-btn.active {
  display: block;
}

.product-image {
  width: 100%;
}

.product-thumbnails {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  margin-top: 2.25rem;
  gap: 2.25rem;
}

.product-thumbnail-btn {
  position: relative;
  border-radius: var(--rounding-md);
  overflow: hidden;
}

.product-thumbnail-btn > img {
  width: 100%;
  display: block;
}

.product-thumbnail-btn:hover {
  opacity: 0.6;
}

.product-thumbnail-btn.selected:hover {
  opacity: 1;
}

.product-thumbnail-btn.selected::after {
  content: "";
  position: absolute;
  inset: 0;
  border: 2px solid var(--color-primary);
  border-radius: var(--rounding-md);
  background: hsla(0, 0%, 100%, 0.7);
}

.product-company {
  font-size: var(--text-lg);
  font-weight: var(--font-weight-bold);
  text-transform: uppercase;
  letter-spacing: 0.125rem;
}

.product-name {
  margin-top: 1rem;
}

.product-description {
  margin-top: 2.5rem;
  letter-spacing: 0.5px;
}

.product-price {
  margin-top: 1rem;
}

.product-price-value {
  font-size: var(--text-xl);
  font-weight: var(--font-weight-bold);
  color: var(--color-neutral-900);
}

.product-price-badge {
  margin-left: 0.75rem;
  padding: 0.25rem 0.5rem;
  font-size: var(--text-lg);
  font-weight: var(--font-weight-bold);
  color: var(--color-white);
  background-color: var(--color-neutral-900);
  border-radius: var(--rounding-sm);
}

.product-price-original {
  margin-top: 0.5rem;
  font-size: var(--text-lg);
  font-weight: var(--font-weight-bold);
}

.product-actions {
  margin-top: 2rem;
  height: calc(var(--text-base) * 4);
  display: grid;
  grid-template-columns: 2fr 3fr;
  gap: 1rem;
}

.product-counter {
  display: flex;
  justify-content: space-around;
  align-items: center;
  border-radius: var(--rounding-md);
  background-color: var(--color-neutral-100);
}

.product-counter > button {
  padding: 0;
  width: 1rem;
  height: 1rem;
  font-size: 0;
}

.product-counter > button:hover {
  opacity: 0.6;
}

#product-counter-value {
  font-size: var(--text-lg);
  font-weight: var(--font-weight-bold);
  color: var(--color-neutral-900);
}

#product-add-btn {
  font-size: var(--text-lg);
  font-weight: var(--font-weight-bold);
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  border-radius: var(--rounding-md);
  background-color: var(--color-primary);
}

#product-add-btn:hover {
  opacity: 0.6;
}

